toolkit/xre/MacLaunchHelper.mm
@@ -93,4 +93,3 @@ void LaunchChildMac(int aArgc, char** aArgv)
 
   NS_OBJC_END_TRY_ABORT_BLOCK;
 }
-
