xpcom/base/nsObjCExceptions.h
@@ -46,6 +46,12 @@
 #import <ExceptionHandling/NSExceptionHandler.h>
 #endif
 
+#if defined(MOZ_CRASHREPORTER) && defined(__cplusplus)
+#include "nsICrashReporter.h"
+#include "nsCOMPtr.h"
+#include "nsServiceManagerUtils.h"
+#endif
+
 #include <unistd.h>
 #include <signal.h>
 #include "nsError.h"
@@ -57,6 +63,14 @@ static void nsObjCExceptionLog(NSException* aException)
 {
   NSLog(@"Mozilla has caught an Obj-C exception [%@: %@]",
         [aException name], [aException reason]);
+
+#if defined(MOZ_CRASHREPORTER) && defined(__cplusplus)
+  // Attach exception info to the crash report.
+  nsCOMPtr<nsICrashReporter> crashReporter =
+    do_GetService("@mozilla.org/toolkit/crash-reporter;1");
+  if (crashReporter)
+    crashReporter->AppendObjCExceptionInfoToAppNotes(static_cast<void*>(aException));
+#endif
 
 #ifdef DEBUG
   @try {
